--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,16 +14,45 @@
         android:theme="@style/Theme.Bux"
         tools:targetApi="31">
         <activity
-            android:name=".activities.PaymentMethodActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.DetailPaymentActivity"
+            android:name=".activities.ChooseSeats"
             android:exported="true">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".activities.BusDetail"
+            android:exported="true">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".activities.BusScheduleActivity"
+            android:exported="true">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+
+        </activity>
+        <activity
+            android:name=".activities.PaymentMethodActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.DetailPaymentActivity"
+            android:exported="true">
+
+            <!-- <intent-filter> -->
+            <!-- &lt;!&ndash;                <action android:name="android.intent.action.MAIN" />&ndash;&gt; -->
+
+
+            <!-- &lt;!&ndash;                <category android:name="android.intent.category.LAUNCHER" />&ndash;&gt; -->
+            <!-- </intent-filter> -->
         </activity>
         <activity
             android:name=".activities.PickDateActivity"
@@ -36,9 +65,7 @@
             android:exported="true" />
         <activity
             android:name=".activities.MainActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true" />
     </application>
 
 </manifest>
